# nostalgia

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark_results.txt  imgui.ini  init_cmake.py
.github/workflows/: release.yml
src/: complex.cpp  complex.h  freeStore.h  log.h  main.cpp  overload.cpp  timer.h
src/allocators/: allocator_atlas.cpp  allocator_atlas.h  allocator_meta.h
src/allocators/concrete/default_malloc/: allocator_default.h
src/allocators/concrete/freelist_variable/: allocator_freelist.cpp  allocator_freelist.h
src/allocators/concrete/linear_bump/: allocator_linear.cpp  allocator_linear.h
src/allocators/concrete/pool_slab/: allocator_pool.cpp  allocator_pool.h
src/allocators/concrete/stack_lifo/: allocator_stack.cpp  allocator_stack.h
src/allocators/concrete/stack_scoped/: allocator_stack_scoped.cpp  allocator_stack_scoped.h
src/allocators/defines/: _clear_defines.inl  _shared_defines.inl  freelist_defines.inl  linear_defines.inl  malloc_defines.inl  pool_defines.inl  stack_defines.inl
src/allocators/freelist_variable/: allocator_freelist.cpp  allocator_freelist.h  defines_freelist.inl
src/allocators/info/: allocator_atlas.cpp  allocator_atlas.h  allocator_meta.h
src/allocators/linear_bump/: allocator_linear.cpp  allocator_linear.h  defines_linear.inl  linear_none.cpp
src/allocators/pool_slab/: allocator_pool.cpp  allocator_pool.h  defines_pool.inl
src/allocators/stack_lifo/: STACK_REF.CPP  allocator_stack.cpp  allocator_stack.h  defines_stack.inl
src/allocators/stack_scoped/: allocator_stack_scoped.cpp  allocator_stack_scoped.h
src/benchmarking/: allocator_dispatch.h  allocator_dispatch.inc  benchmark_atlas.cpp  benchmark_atlas.h  benchmark_loader.cpp  benchmark_loader.h  benchmark_meta.h  benchmark_params.cpp  benchmark_params.h  benchmarking.h  benchmarking.inl  benchmarking_manager.cpp  benchmarking_manager.h  macros.h
src/benchmarking/benchmarking_ibmbursts/: benchmarking_ibmbursts.cpp  benchmarking_ibmbursts.h  dispatch_ibmbursts.cpp
src/benchmarking/defines/: _clear_object_switch.inl
src/benchmarking/dispatcher/: benchmark_loader.cpp  benchmark_loader.h  dispatcher.h  macros.h  per_allocator_dispatch.inc
src/benchmarking/exporter/: benchmarking_exporting.cpp  benchmarking_exporting.h
src/benchmarking/exporting/: benchmarking_exporting.cpp  benchmarking_exporting.h
src/benchmarking/ibmbursts/: dispatch_ibmbursts.cpp  ibmbursts.cpp  ibmbursts.h  ibmbursts.inl  ibmbursts_concrete.inl  ibmbursts_forward_dec.inl  ibmbursts_namespaces.cpp  ibmbursts_object_pass.inl  ibmbursts_object_switch.inl
src/benchmarking/info/: benchmark_atlas.cpp  benchmark_atlas.h  benchmark_meta.h  benchmark_params.h
src/benchmarking/visualiser/: benchmark_analysis.cpp  benchmark_analysis.h  benchmark_visualiser.cpp  benchmark_visualiser.h
src/implementations/: implementation_atlas.cpp  implementation_atlas.h  implementation_meta.h
src/implementations/info/: implementation_atlas.cpp  implementation_atlas.h  implementation_meta.h
src/legacy/: complex.cpp  main.cpp  memoryInterface.h  memoryManager.h  objects.h
src/legacy/benchmarking_ibmbursts/: benchmarking_ibmbursts.cpp  benchmarking_ibmbursts.h
src/objects/: objects.h  objects_freelist.h  objects_linear.h  objects_pool.h  objects_stack.h
src/objects/info/: object_atlas.h  object_meta.h
src/ui/: gui.cpp  gui.h  headless.cpp  headless.h  render.cpp  render.h  style.cpp  style.h
src/ui/gui/: gui.cpp  gui.h
src/ui/headless/: headless.cpp  headless.h
src/ui/system/: imgui_presets.cpp  imgui_presets.h  presets.cpp  presets.h  render.cpp  render.h  renderer_vulkan.cpp  renderer_vulkan.h  style.cpp  style.h
src/utils/: bitmask_operators.h  implot_wrapped.h  json_wrapped.h  log.h  return_codes.h  shared_benchmark_includes.inl  timer.h
